# cs-auth-service

./: .gitignore  Cargo.toml  Dockerfile  ReadMe.md  docker-compose.yml  env.example
cs_shared_lib/: Cargo.toml
cs_shared_lib/src/: lib.rs  redis.rs  validation.rs
src/: main.rs
src/app/: app_error.rs  app_errors.rs  common.rs  mod.rs
src/app/app_data/: mod.rs
src/app/handlers/: common.rs  health_check.rs  logout.rs  me.rs  mod.rs
src/app/handlers/cyber_sherlock/: auth_callback.rs  login.rs  mod.rs  register.rs
src/app/handlers/facebook/: auth_callback.rs  login.rs
src/app/handlers/google/: auth_callback.rs  login.rs  logout.rs  mod.rs
src/app/middlewares/: session.rs
src/app/models/: common.rs  mod.rs  session.rs  session_metadata.rs  session_tokens.rs  token.rs  user.rs  user_profile.rs
src/app/providers/: common.rs  error.rs  mod.rs
src/app/providers/cyber_sherlock/: common.rs  error.rs  provider.rs
src/app/providers/facebook/: common.rs  error.rs  mod.rs  provider.rs  service.rs
src/app/providers/google/: common.rs  error.rs  mod.rs  provider.rs  service.rs  tests.rs
src/app/providers/notification/: common.rs  mod.rs  provider.rs
src/app/redis/: service.rs
src/app/repositories/session/: error.rs  mod.rs  repository.rs  test.rs
src/app/repositories/user/: error.rs  mod.rs  repository.rs  test.rs
src/app/services/: common.rs  mod.rs
src/app/services/cache/: common.rs  error.rs  mod.rs  service.rs
src/app/services/google/: error.rs  mod.rs  service.rs  structures.rs  tests.rs
src/app/services/redis/: service.rs
src/app/services/session/: error.rs  service.rs
src/app/services/storage/: error.rs  mod.rs  mongodb.rs  postgres.rs  service.rs
src/app/services/tests/: fake_cache_service.rs  mod.rs
src/app/services/traits/: mod.rs  session_storage.rs
src/app/services/user/: error.rs  mod.rs  service.rs  user.rs
src/app/shared/: jwt.rs
src/config/: app_config.rs  cookie_config.rs  facebook_config.rs  google_config.rs  mod.rs  mongodb_config.rs  redis_config.rs  session_config.rs  user_config.rs
src/tests/: test_data.rs
