[package]
name = "cs-auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.0"
cs_shared_lib = { path = "./cs_shared_lib" }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
oauth2 = "4.4.1"
regex = "1.9.5"
serde = { version = "1.0", feature = ["derive"]}
url = "2.4.1"
redis = "0.16"