[package]
name = "cs-auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
awc = "3.2.0"
actix-rt = "2.9.0"
actix-web = { version = "4.4.0", features = ["secure-cookies"]}
cs_shared_lib = { path = "./cs_shared_lib" }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.0.0"
log = "0.4"
oauth2 = "4.4.1"
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"]}
url = "2.4.1"
redis = { version = "0.23.3", features = ["cluster", "json"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
actix-web-thiserror = "0.2.0"
actix-web-thiserror-derive = "0.2.0"
base64 = "0.21.5"
mongodb = "2.7.1"
chrono = "0.4.31"
bson = { version = "2.7.0", features = ["chrono-0_4"] }
derivative = "2.2.0"
uuid = { version = "1.6.1", feature = ["v4", "fast-rng"] }
rand = "0.8.5"